# todomanager

./: .gitignore  README.md  package-lock.json  railway.json  vercel.json
.github/workflows/: deploy.yml
backend/: .railwayignore  CMakeLists.txt  Dockerfile  docker-compose.yml  nixpacks.toml  railway.json  render.yaml
backend/include/: auth.h  db.h  routes.h  task.h  user.h
backend/src/: auth.cpp  db.cpp  main.cpp  routes.cpp  task.cpp  user.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: 404.html
frontend/src/: App.css  App.jsx
frontend/src/components/: Login.css  Login.jsx  TaskForm.css  TaskForm.jsx  TaskItem.css  TaskItem.jsx  TaskList.css  TaskList.jsx
frontend/src/services/: api.js
frontend/src/utils/: dateUtils.js
